@@ -1,4 +1,4 @@
-.TH OBFS4PROXY 1 "2015-01-20"
+.TH OBFS4PROXY 1 "2015-04-03"
 .SH NAME
 obfs4proxy \- pluggable transport proxy for Tor, implementing obfs4
 .SH SYNOPSIS
@@ -28,8 +28,8 @@ Display version information and exit.
 Enable logging.
 .TP
 \fB\-\-logLevel\fR=\fIlevel\fR
-Specify the maximum log severity to log out of "\fBERROR\fR", "\fBWARN\fR", and
-"\fBINFO\fR".
+Specify the maximum log severity to log out of "\fBERROR\fR", "\fBWARN\fR",
+"\fBINFO\fR", and "\fBDEBUG\fR".
 .TP
 \fB\-\-unsafeLogging\fR
 Disable the IP address scrubber when logging, storing personally identifiable
