@@ -1,88 +1,0 @@
-/*
- * Copyright (c) 2014, Yawning Angel <yawning at torproject dot org>
- * All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are met:
- *
- *  * Redistributions of source code must retain the above copyright notice,
- *    this list of conditions and the following disclaimer.
- *
- *  * Redistributions in binary form must reproduce the above copyright notice,
- *    this list of conditions and the following disclaimer in the documentation
- *    and/or other materials provided with the distribution.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
- * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
- * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
- * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
- * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
- * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
- * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
- * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
- * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
- * POSSIBILITY OF SUCH DAMAGE.
- */
-
-package main
-
-import (
-	"fmt"
-	"log"
-	"strings"
-)
-
-const (
-	levelError = iota
-	levelWarn
-	levelInfo
-)
-
-var logLevel = levelInfo
-
-func noticef(format string, a ...interface{}) {
-	if enableLogging {
-		msg := fmt.Sprintf(format, a...)
-		log.Print("[NOTICE]: " + msg)
-	}
-}
-
-func errorf(format string, a ...interface{}) {
-	if enableLogging && logLevel >= levelError {
-		msg := fmt.Sprintf(format, a...)
-		log.Print("[ERROR]: " + msg)
-	}
-}
-
-func warnf(format string, a ...interface{}) {
-	if enableLogging && logLevel >= levelWarn {
-		msg := fmt.Sprintf(format, a...)
-		log.Print("[WARN]: " + msg)
-	}
-}
-
-func infof(format string, a ...interface{}) {
-	if enableLogging && logLevel >= levelInfo {
-		msg := fmt.Sprintf(format, a...)
-		log.Print("[INFO]: " + msg)
-	}
-}
-
-func setLogLevel(logLevelStr string) error {
-	switch strings.ToUpper(logLevelStr) {
-	case "ERROR":
-		logLevel = levelError
-
-	case "WARN":
-		logLevel = levelWarn
-
-	case "INFO":
-		logLevel = levelInfo
-
-	default:
-		return fmt.Errorf("invalid log level '%s'", logLevelStr)
-	}
-
-	return nil
-}
